tests/errors/syntax_errors/raise.py
# Uncovered raise statement by Pyccel
# pylint: disable=missing-function-docstring, missing-module-docstring

raise NotImplementedError("raises error")
